Documentation de criticsControlleur
Documentation du controller criticsController (méthode show et methode destroy)
